# auto_job_application

./: .gitignore  .graphifyignore  AGENTS.md  README.md  job_agent.py  main.py  pyproject.toml  resume_manager.py
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
app/: config.py  job_agent.py  knowledge_base.py  logger_config.py  resume_manager.py  session_pool.py
app/agents/: __init__.py  job_application_agent.py  job_search_agent.py  knowledge_base_agent.py  resume_manager_agent.py
app/models/: llm_responses.py
planning/: implementation_plan.md  task.md
tests/: test_job_application_agent.py  test_job_search_agent.py  test_knowledge_base.py  test_resume_manager.py
