[project]
name = "auto-job-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-use>=0.12.0,<1.0",
    "colorlog>=6.10.1,<7.0",
    "langchain>=1.2.10,<2.0",
    "langchain-cohere>=0.5.0,<1.0",
    "langchain-core>=1.2.16,<2.0",
    "mem0ai>=2.0.2,<3.0",
    "pypdf>=6.6.0,<7.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "taskipy>=1.2.1", "graphifyy>=0.4.23"]

[tool.taskipy.tasks]
test = "pytest"
apply = "python main.py"
